objects/Account__x.object
<CustomObject>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate_pc__c</fullName>
        <externalDeveloperName>LastModifiedDate__pc</externalDeveloperName>
        <label>Last Modifed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name_c__c</fullName>
        <externalDeveloperName>Last_Name__c</externalDeveloperName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launchbox_ID_c__c</fullName>
        <externalDeveloperName>Launchbox_ID__c</externalDeveloperName>
        <label>Launchbox_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launchbox_ID_pc__c</fullName>
        <externalDeveloperName>Launchbox_ID__pc</externalDeveloperName>
        <label>Launchbox ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadEntryPoint_TXT_c__c</fullName>
        <externalDeveloperName>LeadEntryPoint_TXT__c</externalDeveloperName>
        <label>Lead Entry Point</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eShopping</fullName>
                </value>
                <value>
                    <fullName>ECRM</fullName>
                </value>
                <value>
                    <fullName>LDRA</fullName>
                </value>
                <value>
                    <fullName>Urban Science</fullName>
                </value>
                <value>
                    <fullName>Direct to Dealer CRM</fullName>
                </value>
                <value>
                    <fullName>ECRM/Events</fullName>
                </value>
                <value>
                    <fullName>Email Campaigns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadVendorName_TXT_c__c</fullName>
        <externalDeveloperName>LeadVendorName_TXT__c</externalDeveloperName>
        <label>Lead Vendor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_c__c</fullName>
        <externalDeveloperName>Lead_Source__c</externalDeveloperName>
        <label>Provider Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Walk-in</fullName>
                </value>
                <value>
                    <fullName>Brand Site</fullName>
                </value>
                <value>
                    <fullName>Lead Campaign</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Dealer Website</fullName>
                </value>
                <value>
                    <fullName>Event/Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>DSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoanAmount_AMT_c__c</fullName>
        <externalDeveloperName>LoanAmount_AMT__c</externalDeveloperName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <externalDeveloperName>MasterRecordId</externalDeveloperName>
        <label>Master Record ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <referenceTo>Account__x</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Id_c__c</fullName>
        <externalDeveloperName>Merchant_Id__c</externalDeveloperName>
        <label>Merchant Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <externalDeveloperName>MiddleName</externalDeveloperName>
        <label>Middle Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelInfo_TXT_c__c</fullName>
        <externalDeveloperName>ModelInfo_TXT__c</externalDeveloperName>
        <label>Model info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MonCloseHour_c__c</fullName>
        <externalDeveloperName>MonCloseHour__c</externalDeveloperName>
        <label>Mon Close Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonOpenHour_c__c</fullName>
        <externalDeveloperName>MonOpenHour__c</externalDeveloperName>
        <label>Mon Open Hour</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_NM_c__c</fullName>
        <externalDeveloperName>Name_NM__c</externalDeveloperName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Account Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Date_c__c</fullName>
        <externalDeveloperName>Notification_Date__c</externalDeveloperName>
        <label>Notification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <externalDeveloperName>NumberOfEmployees</externalDeveloperName>
        <label>Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnBoarding_Error_c__c</fullName>
        <externalDeveloperName>OnBoarding_Error__c</externalDeveloperName>
        <label>OnBoarding Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherOwnedProducts_TXT_c__c</fullName>
        <externalDeveloperName>OtherOwnedProducts_TXT__c</externalDeveloperName>
        <label>Other owned products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OutreachComplete_FLG_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>OutreachComplete_FLG__c</externalDeveloperName>
        <label>Outreach Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnedHondaProducts_TXT_c__c</fullName>
        <externalDeveloperName>OwnedHondaProducts_TXT__c</externalDeveloperName>
        <label>Owned HONDA Products</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <externalDeveloperName>Ownership</externalDeveloperName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pager_TXT_c__c</fullName>
        <externalDeveloperName>Pager_TXT__c</externalDeveloperName>
        <label>Pager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentDealerCode_TXT_c__c</fullName>
        <externalDeveloperName>ParentDealerCode_TXT__c</externalDeveloperName>
        <label>Parent Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>Parent Account ID</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Participation_Code_c__c</fullName>
        <externalDeveloperName>Participation_Code__c</externalDeveloperName>
        <label>Participation Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DRM</fullName>
                </value>
                <value>
                    <fullName>RES</fullName>
                </value>
                <value>
                    <fullName>DSP</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaypalFlag_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PaypalFlag__c</externalDeveloperName>
        <label>PaypalFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PersonAssistantName__c</fullName>
        <externalDeveloperName>PersonAssistantName</externalDeveloperName>
        <label>Assistant</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonAssistantPhone__c</fullName>
        <externalDeveloperName>PersonAssistantPhone</externalDeveloperName>
        <label>Asst. Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonBirthdate__c</fullName>
        <externalDeveloperName>PersonBirthdate</externalDeveloperName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PersonContactId__c</fullName>
        <externalDeveloperName>PersonContactId</externalDeveloperName>
        <label>Contact ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonDepartment__c</fullName>
        <externalDeveloperName>PersonDepartment</externalDeveloperName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonDoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PersonDoNotCall</externalDeveloperName>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PersonEmailBouncedDate__c</fullName>
        <externalDeveloperName>PersonEmailBouncedDate</externalDeveloperName>
        <label>Email Bounced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PersonEmailBouncedReason__c</fullName>
        <externalDeveloperName>PersonEmailBouncedReason</externalDeveloperName>
        <label>Email Bounced Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonEmail__c</fullName>
        <externalDeveloperName>PersonEmail</externalDeveloperName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PersonHasOptedOutOfEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PersonHasOptedOutOfEmail</externalDeveloperName>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PersonHomePhone__c</fullName>
        <externalDeveloperName>PersonHomePhone</externalDeveloperName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonIndividualId__c</fullName>
        <externalDeveloperName>PersonIndividualId</externalDeveloperName>
        <label>Individual ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonLastCURequestDate__c</fullName>
        <externalDeveloperName>PersonLastCURequestDate</externalDeveloperName>
        <label>Last Stay-in-Touch Request Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PersonLastCUUpdateDate__c</fullName>
        <externalDeveloperName>PersonLastCUUpdateDate</externalDeveloperName>
        <label>Last Stay-in-Touch Save Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PersonLeadSource__c</fullName>
        <externalDeveloperName>PersonLeadSource</externalDeveloperName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertisement</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Seminar - Internal</fullName>
                </value>
                <value>
                    <fullName>Seminar - Partner</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonMailingAddress__c</fullName>
        <externalDeveloperName>PersonMailingAddress</externalDeveloperName>
        <label>Mailing Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PersonMailingCity__c</fullName>
        <externalDeveloperName>PersonMailingCity</externalDeveloperName>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingCountry__c</fullName>
        <externalDeveloperName>PersonMailingCountry</externalDeveloperName>
        <label>Mailing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>PersonMailingGeocodeAccuracy</externalDeveloperName>
        <label>Mailing Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                    <label>Near Address</label>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                    <label>Extended Zip</label>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonMailingLatitude__c</fullName>
        <externalDeveloperName>PersonMailingLatitude</externalDeveloperName>
        <label>Mailing Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonMailingLongitude__c</fullName>
        <externalDeveloperName>PersonMailingLongitude</externalDeveloperName>
        <label>Mailing Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonMailingPostalCode__c</fullName>
        <externalDeveloperName>PersonMailingPostalCode</externalDeveloperName>
        <label>Mailing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingState__c</fullName>
        <externalDeveloperName>PersonMailingState</externalDeveloperName>
        <label>Mailing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonMailingStreet__c</fullName>
        <externalDeveloperName>PersonMailingStreet</externalDeveloperName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PersonMobilePhone__c</fullName>
        <externalDeveloperName>PersonMobilePhone</externalDeveloperName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonOtherAddress__c</fullName>
        <externalDeveloperName>PersonOtherAddress</externalDeveloperName>
        <label>Other Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PersonOtherCity__c</fullName>
        <externalDeveloperName>PersonOtherCity</externalDeveloperName>
        <label>Other City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonOtherCountry__c</fullName>
        <externalDeveloperName>PersonOtherCountry</externalDeveloperName>
        <label>Other Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonOtherGeocodeAccuracy__c</fullName>
        <externalDeveloperName>PersonOtherGeocodeAccuracy</externalDeveloperName>
        <label>Other Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                    <label>Near Address</label>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                    <label>Extended Zip</label>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonOtherLatitude__c</fullName>
        <externalDeveloperName>PersonOtherLatitude</externalDeveloperName>
        <label>Other Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonOtherLongitude__c</fullName>
        <externalDeveloperName>PersonOtherLongitude</externalDeveloperName>
        <label>Other Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PersonOtherPhone__c</fullName>
        <externalDeveloperName>PersonOtherPhone</externalDeveloperName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PersonOtherPostalCode__c</fullName>
        <externalDeveloperName>PersonOtherPostalCode</externalDeveloperName>
        <label>Other Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonOtherState__c</fullName>
        <externalDeveloperName>PersonOtherState</externalDeveloperName>
        <label>Other State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonOtherStreet__c</fullName>
        <externalDeveloperName>PersonOtherStreet</externalDeveloperName>
        <label>Other Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PersonTitle__c</fullName>
        <externalDeveloperName>PersonTitle</externalDeveloperName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneExtension_TXT_c__c</fullName>
        <externalDeveloperName>PhoneExtension_TXT__c</externalDeveloperName>
        <label>Dealer Phone Extension</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhoneExtn_TXT_pc__c</fullName>
        <externalDeveloperName>PhoneExtn_TXT__pc</externalDeveloperName>
        <label>Phone Extension</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Account Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <externalDeveloperName>PhotoUrl</externalDeveloperName>
        <label>Photo URL</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PoIId_c__c</fullName>
        <externalDeveloperName>PoIId__c</externalDeveloperName>
        <label>Dealer Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preference_CD_c__c</fullName>
        <externalDeveloperName>Preference_CD__c</externalDeveloperName>
        <label>Preference Values</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Dealer_Name_account_c__c</fullName>
        <externalDeveloperName>Preferred_Dealer_Name_account__c</externalDeveloperName>
        <label>Preferred Dealer Name account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Delivery_Type_c__c</fullName>
        <externalDeveloperName>Preferred_Delivery_Type__c</externalDeveloperName>
        <label>Preferred Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Install At Dealer</fullName>
                </value>
                <value>
                    <fullName>Ship to Me</fullName>
                </value>
                <value>
                    <fullName>Pick Up At Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Honda_Shipping_Speed_c__c</fullName>
        <externalDeveloperName>Preferred_Honda_Shipping_Speed__c</externalDeveloperName>
        <label>Preferred Honda Shipping Speed</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Shipping_Carrier_c__c</fullName>
        <externalDeveloperName>Preferred_Shipping_Carrier__c</externalDeveloperName>
        <label>Preferred Shipping Carrier</label>
        <length>18</length>
        <referenceTo>Carrier_c__x</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>PreviousOwner_TXT_c__c</fullName>
        <externalDeveloperName>PreviousOwner_TXT__c</externalDeveloperName>
        <label>Previous Owner</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryMemberofHousehold_FLAG_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>PrimaryMemberofHousehold_FLAG__c</externalDeveloperName>
        <label>Primary Member of household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Privacy_Policy_URL_c__c</fullName>
        <externalDeveloperName>Privacy_Policy_URL__c</externalDeveloperName>
        <label>Privacy Policy URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_TXT_c__c</fullName>
        <externalDeveloperName>Product_TXT__c</externalDeveloperName>
        <label>Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProviderSourceType_TXT_c__c</fullName>
        <externalDeveloperName>ProviderSourceType_TXT__c</externalDeveloperName>
        <label>Provider Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T1</fullName>
                </value>
                <value>
                    <fullName>T2</fullName>
                </value>
                <value>
                    <fullName>T3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProviderStatus_TXT_c__c</fullName>
        <externalDeveloperName>ProviderStatus_TXT__c</externalDeveloperName>
        <label>Provider Status</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Service_Name_c__c</fullName>
        <externalDeveloperName>Provider_Service_Name__c</externalDeveloperName>
        <label>Provider Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseAmount_AMT_c__c</fullName>
        <externalDeveloperName>PurchaseAmount_AMT__c</externalDeveloperName>
        <label>Purchase Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PurchaseDate_TXT_c__c</fullName>
        <externalDeveloperName>PurchaseDate_TXT__c</externalDeveloperName>
        <label>Purchase Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PurchaseQuantity_NUM_c__c</fullName>
        <externalDeveloperName>PurchaseQuantity_NUM__c</externalDeveloperName>
        <label>Purchase Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <externalDeveloperName>Rating</externalDeveloperName>
        <label>Account Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Realtime_TimeZone_Offset_c__c</fullName>
        <externalDeveloperName>Realtime_TimeZone_Offset__c</externalDeveloperName>
        <label>Realtime TimeZone Offset</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_Dealer_Updates_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Receive_Dealer_Updates__c</externalDeveloperName>
        <label>Receive Dealer Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restocking_Fees_Percentage_c__c</fullName>
        <externalDeveloperName>Restocking_Fees_Percentage__c</externalDeveloperName>
        <label>Restocking Fees Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Restocking_Fees_Type_c__c</fullName>
        <externalDeveloperName>Restocking_Fees_Type__c</externalDeveloperName>
        <label>Restocking Fees Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restocking_Fees_c__c</fullName>
        <externalDeveloperName>Restocking_Fees__c</externalDeveloperName>
        <label>Restocking Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Return_Window_c__c</fullName>
        <externalDeveloperName>Return_Window__c</externalDeveloperName>
        <label>Return Window</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Role_Description_pc__c</fullName>
        <externalDeveloperName>Role_Description__pc</externalDeveloperName>
        <label>Role Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_pc__c</fullName>
        <externalDeveloperName>Role__pc</externalDeveloperName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zone Manager</fullName>
                </value>
                <value>
                    <fullName>Assistant Zone Manager</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>TA/Admin</fullName>
                </value>
                <value>
                    <fullName>DSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Routable_FLG_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Routable_FLG__c</externalDeveloperName>
        <inlineHelpText>Provider Routable status for the dealers who are not enrolled in the HDS program</inlineHelpText>
        <label>Routable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoutingDate_DT_c__c</fullName>
        <externalDeveloperName>RoutingDate_DT__c</externalDeveloperName>
        <label>Routing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Routing_Date_Termination_c__c</fullName>
        <externalDeveloperName>Routing_Date_Termination__c</externalDeveloperName>
        <label>Routing Termination Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAP_Account_c__c</fullName>
        <externalDeveloperName>SAP_Account__c</externalDeveloperName>
        <label>SAP Account #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Jurisdiction__c</fullName>
        <externalDeveloperName>Sales_Tax_Jurisdiction__c</externalDeveloperName>
        <label>Sales Tax Jurisdiction</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
</CustomObject>